# routes/categories.js
@@ -6,13 +6,14 @@ import {
 	updateCategory,
 	deleteCategory,
 } from "../controllers/categories.js";
+import isAuthenticated from "../middlewares/isAuthenticated.js";
 
 const router = Router();
 
 router.get("/", getAllCategories);
 router.get("/:id", getCategoryById);
-router.post("/", createCategory);
-router.put("/:id", updateCategory);
-router.delete("/:id", deleteCategory);
+router.post("/", isAuthenticated, createCategory);
+router.put("/:id", isAuthenticated, updateCategory);
+router.delete("/:id", isAuthenticated, deleteCategory);
 
 export default router;
